@@ -47,6 +47,8 @@ ECL 0.9f
 
  - SBCL sockets have been ported to unix (J. Stecklina) and to windows
    (M. Goffioul) and are built when using the configuration option --with-tcp.
+   Both INET and Unix sockets are implemented, although under windows the
+   latter must be simulated using pipes.
 
 ;;; Local Variables: ***
 ;;; mode:text ***
